--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "openai": "^3.1.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-code-editor": "^0.13.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
